--- a/Touristation/Touristation/packages.config
+++ b/Touristation/Touristation/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="AjaxControlToolkit" version="19.1.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20505.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20505.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20505.0" targetFramework="net461" />
