--- a/Touristation/Touristation/Touristation.csproj
+++ b/Touristation/Touristation/Touristation.csproj
@@ -153,6 +153,7 @@
       <DependentUpon>ViewCompetitions.aspx</DependentUpon>
     </Compile>
     <Compile Include="Model_Methods\CompetitionDAM.cs" />
+    <Compile Include="Model_Methods\EntryDAM.cs" />
     <Compile Include="Model_Methods\UserDAM.cs" />
     <Compile Include="DAL\UserDAO.cs" />
     <Compile Include="HTMLPages\CreateCompetition.aspx.cs">
@@ -221,6 +222,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="HTMLPages\Images\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
