entry deleting is complete

--- a/Touristation/Touristation/Touristation.csproj
+++ b/Touristation/Touristation/Touristation.csproj
@@ -124,7 +124,8 @@
     <Content Include="HTMLPages\SubmitEntry.aspx" />
     <Content Include="HTMLPages\ViewCompetitions.aspx" />
     <Content Include="HTMLPages\ViewEntries.aspx" />
-    <Content Include="HTMLPages\GradeEntry.aspx" />
+    <Content Include="HTMLPages\SingleEntry.aspx" />
+    <Content Include="HTMLPages\ViewOwnEntries.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="packages.config" />
@@ -169,12 +170,19 @@
     <Compile Include="HTMLPages\ViewEntries.aspx.designer.cs">
       <DependentUpon>ViewEntries.aspx</DependentUpon>
     </Compile>
-    <Compile Include="HTMLPages\GradeEntry.aspx.cs">
-      <DependentUpon>GradeEntry.aspx</DependentUpon>
+    <Compile Include="HTMLPages\SingleEntry.aspx.cs">
+      <DependentUpon>SingleEntry.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="HTMLPages\GradeEntry.aspx.designer.cs">
-      <DependentUpon>GradeEntry.aspx</DependentUpon>
+    <Compile Include="HTMLPages\SingleEntry.aspx.designer.cs">
+      <DependentUpon>SingleEntry.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HTMLPages\ViewOwnEntries.aspx.cs">
+      <DependentUpon>ViewOwnEntries.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HTMLPages\ViewOwnEntries.aspx.designer.cs">
+      <DependentUpon>ViewOwnEntries.aspx</DependentUpon>
     </Compile>
     <Compile Include="Model_Methods\CompetitionDAM.cs" />
     <Compile Include="Model_Methods\EntryDAM.cs" />
