dealt with some stuff

--- a/Touristation/Touristation/Touristation.csproj
+++ b/Touristation/Touristation/Touristation.csproj
@@ -119,9 +119,9 @@
     <Content Include="HTMLPages\EditCompetition.aspx" />
     <Content Include="HTMLPages\EndedEntry.aspx" />
     <Content Include="HTMLPages\Homepage.aspx" />
+    <Content Include="HTMLPages\JudgeEntry.aspx" />
     <Content Include="HTMLPages\Login.aspx" />
     <Content Include="HTMLPages\Logout.aspx" />
-    <Content Include="HTMLPages\PickWinners.aspx" />
     <Content Include="HTMLPages\Profile.aspx" />
     <Content Include="HTMLPages\Register.aspx" />
     <Content Include="HTMLPages\SubmitEntry.aspx" />
@@ -172,19 +172,19 @@
     <Compile Include="HTMLPages\EndedEntry.aspx.designer.cs">
       <DependentUpon>EndedEntry.aspx</DependentUpon>
     </Compile>
+    <Compile Include="HTMLPages\JudgeEntry.aspx.cs">
+      <DependentUpon>JudgeEntry.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HTMLPages\JudgeEntry.aspx.designer.cs">
+      <DependentUpon>JudgeEntry.aspx</DependentUpon>
+    </Compile>
     <Compile Include="HTMLPages\Logout.aspx.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="HTMLPages\Logout.aspx.designer.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="HTMLPages\PickWinners.aspx.cs">
-      <DependentUpon>PickWinners.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="HTMLPages\PickWinners.aspx.designer.cs">
-      <DependentUpon>PickWinners.aspx</DependentUpon>
     </Compile>
     <Compile Include="HTMLPages\ViewCompetitions.aspx.cs">
       <DependentUpon>ViewCompetitions.aspx</DependentUpon>
