--- a/Touristation/Touristation/Touristation.csproj
+++ b/Touristation/Touristation/Touristation.csproj
@@ -147,10 +147,12 @@
   <ItemGroup>
     <Compile Include="BLL\Competition.cs" />
     <Compile Include="BLL\Entry.cs" />
+    <Compile Include="BLL\Event.cs" />
     <Compile Include="BLL\Itinerary.cs" />
     <Compile Include="BLL\TouristationEntityModel.cs" />
     <Compile Include="BLL\User.cs" />
     <Compile Include="BLL\Vote.cs" />
+    <Compile Include="DAL\EventDAO.cs" />
     <Compile Include="DAL\VoteDAO.cs" />
     <Compile Include="HTMLPages\ChooseJudge.aspx.cs">
       <DependentUpon>ChooseJudge.aspx</DependentUpon>
@@ -234,6 +236,7 @@
     </Compile>
     <Compile Include="Model_Methods\CompetitionDAM.cs" />
     <Compile Include="Model_Methods\EntryDAM.cs" />
+    <Compile Include="Model_Methods\EventDAM.cs" />
     <Compile Include="Model_Methods\ItineraryDAM.cs" />
     <Compile Include="Model_Methods\UserDAM.cs" />
     <Compile Include="DAL\UserDAO.cs" />
